# keneric

./: CMakeLists.txt  README.md  changelog  keneric.cpp  keneric.h
desktop/: keneric.desktop  kenericTemplate.desktop  kenericstl.desktop  kenericstlb.desktop
readme/: readme.html
scripts/: kenericProcess  stripPicture
