project(keneric)

cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
set(QT_MIN_VERSION "5.2.0")

find_package(ECM 1.0.0 REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

include(FeatureSummary)
include(WriteBasicConfigVersionFile)
include(KDEInstallDirs)
include(KDECMakeSettings)
include(KDECompilerSettings)

find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Gui)
find_package(KF5 REQUIRED COMPONENTS KIO)

include_directories(
    ${CMAKE_CURRENT_BINARY_DIR}
    )

set( keneric_PART_SRCS
  keneric.cpp
)

add_library(keneric MODULE ${keneric_PART_SRCS})

target_link_libraries(keneric Qt5::Gui KF5::KIOWidgets)

install(TARGETS keneric DESTINATION ${PLUGIN_INSTALL_DIR})


